<package format="2">
  <name>rqt_image_view</name>
  <version>0.4.13</version>
  <description>rqt_image_view provides a GUI plugin for displaying images using image_transport.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_image_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt_image_view</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_image_view/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>qtbase5-dev</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
